RESOLVED FIXED123609
[EFL][WK1] Rendering is broken when scrolled ewk_view_single repeatedly
https://bugs.webkit.org/show_bug.cgi?id=123609
Summary [EFL][WK1] Rendering is broken when scrolled ewk_view_single repeatedly
Ryuan Choi
Reported 2013-10-31 21:13:59 PDT
Created attachment 215714 [details] screenshot When scrolled wek_view_single fast and repeatedly, Rendered results are sometimes broken.
Attachments
screenshot (441.15 KB, image/png)
2013-10-31 21:13 PDT, Ryuan Choi
no flags
Patch (2.74 KB, patch)
2013-10-31 21:45 PDT, Ryuan Choi
no flags
Patch (2.72 KB, patch)
2013-10-31 23:32 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2013-10-31 21:45:24 PDT
Gyuyoung Kim
Comment 2 2013-10-31 22:29:03 PDT
Comment on attachment 215715 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=215715&action=review > Source/WebKit/efl/ewk/ewk_view_single.cpp:200 > + WebCore::IntRect rectToScroll = WebCore::IntRect(0, 0, imageWidth, imageHeight); Isn't below more simple ? WebCore::IntRect rectToScroll(0, 0, imageWidth, imageHeight);
Ryuan Choi
Comment 3 2013-10-31 23:32:03 PDT
Ryuan Choi
Comment 4 2013-10-31 23:32:55 PDT
(In reply to comment #2) > (From update of attachment 215715 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=215715&action=review > > > Source/WebKit/efl/ewk/ewk_view_single.cpp:200 > > + WebCore::IntRect rectToScroll = WebCore::IntRect(0, 0, imageWidth, imageHeight); > > Isn't below more simple ? > > WebCore::IntRect rectToScroll(0, 0, imageWidth, imageHeight); Absolutely right. Fixed.
WebKit Commit Bot
Comment 5 2013-11-01 00:13:45 PDT
Comment on attachment 215719 [details] Patch Clearing flags on attachment: 215719 Committed r158426: <http://trac.webkit.org/changeset/158426>
WebKit Commit Bot
Comment 6 2013-11-01 00:13:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.