[EFL][WK1] Rendering is broken when scrolled ewk_view_single repeatedly https://bugs.webkit.org/show_bug.cgi?id=123609

Reviewed by Gyuyoung Kim.

ewk_view_single adds wrong updateRects except last one in scrolls_process,
because previous updateRects are not considered accumulated scrollOffsets.

* ewk/ewk_view_single.cpp:
(_ewk_view_single_smart_scrolls_process):
Merged scrollOffsets to calculate updateRects once.
It will also reduce unnecessary memory copy operations.


Canonical link: https://commits.webkit.org/141782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158426 268f45cc-cd09-0410-ab3c-d52691b4dbfc